--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
+    "tsc": "^2.0.4",
     "typescript": "^4.1.3",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
